--- a/4. Data Cleaning/Code and Data/Data Cleaning.Rmd
+++ b/4. Data Cleaning/Code and Data/Data Cleaning.Rmd
@@ -9,5 +9,29 @@ output: pdf_document
 
 ```{r}
 library(mice)
-mdata = read.csv()
+mdata = read.csv('MData.csv', sep=';')
+head(mdata)
 ```
+
+```{r}
+md.pattern(mdata)
+```
+
+```{r}
+mdata2 = mdata[complete.cases(mdata),]
+mdata[!complete.cases(mdata),]
+```
+
+```{r}
+mdata$indus
+edit(mdata$indus)
+mdata
+```
+
+```{r}
+median(mdata$crim, na.rm=T)
+mdata$crim = ifelse(is.na(mdata$crim), median(mdata$crim, na.rm=T), mdata$crim)
+mdata
+```
+
+`na.rm` argument ask the user whether the missing value should be remove before computing the median
