--- a/6. Data Reduction/Code and Data/Data Reduction.Rmd
+++ b/6. Data Reduction/Code and Data/Data Reduction.Rmd
@@ -9,9 +9,9 @@ output: pdf_document
 
 Data reduction is a technique that we can use when the number of the data is too large and using full data requires a costly and time-consuming computational method. There are two techniques to reduce the data:
 
-1) Dimension Data Reduction
+1)  Dimension Data Reduction
 
-2) Numerosity Data Reduction
+2)  Numerosity Data Reduction
 
 ## Dimensional Data Reduction
 
@@ -38,11 +38,51 @@ head(hitters3)
 ### Primary Component Analysis (PCA)
 
 ```{r}
+reading = read.csv('READING120n.csv')
+head(reading)
+```
 
+Remove non-numeric column.
+
+```{r}
+reading2 = reading[,-1]
+head(reading2)
+```
+
+```{r}
+library(psych)
+describe(reading2)
+```
+
+```{r}
+z = scale(reading2)
+pairs(~., data=z)
+```
+
+```{r}
+cor_z = cor(z)
+cor_z
+```
+
+```{r}
+eigen(cor_z)
+```
+
+```{r}
+scree(cor_z)
+```
+
+```{r}
+eigen(cor_z)$vectors
+y = z %*% eigen(cor_z)$vectors
+colnames(y) = c('PCA1', 'PCA2', 'PCA3', 'PCA4', 'PCA5', 'PCA6')
+prop.var = eigen(cor_z)$values / length(eigen(cor_z)$values)
+cumsum(prop.var)
 ```
 
 ### Factor Analysis
 
 ```{r}
-
+fa = factanal(cor_z, factors=2, rotation='varimax')
+?factanal
 ```
