--- a/5. Data Transformation and Discretization/Code and Data/Data Transformation and Discretization.Rmd
+++ b/5. Data Transformation and Discretization/Code and Data/Data Transformation and Discretization.Rmd
@@ -2,27 +2,107 @@
 title: "Data Transformation and Discretization"
 author: "Hazim Fitri"
 date: "2024-12-18"
-output: pdf_document
+output:
+  pdf_document:
+    toc: true
 ---
 
 # Data Transformation and Discretization
 
+## Normalization
+
+### Min-Max Normalization
+
 ```{r}
-dataAP3 <- read.csv(filepath, header = T)
+dataAP3 <- read.csv('dataAP3.csv', header = T)
 head(dataAP3)
-data = dataAP3[,-c(1)]
-#Ozone
-attach(data)
-min.O3 <- min(ozone_ppm)
-max.O3 <- max(ozone_ppm)
-
-new_max.O3 <- 1
-new_min.O3 <- 0
-
-new.O3 <- ((ozone_ppm-min.O3) * (new_max.O3-new_min.O3) / (max.O3-min.O3)) + 
-          new()
-
-# iii. Penormalan
-pHnew <- pressure_height.hPA/1000
-vpanew <- 
 ```
+
+```{r}
+dataAP3 = dataAP3[,-c(1)]
+head(dataAP3)
+```
+
+```{r}
+hist(dataAP3$ozone_ppm)
+```
+
+![](images/clipboard-1994882794.png)
+
+```{r}
+min_ozone = min(dataAP3$ozone_ppm)
+max_ozone = max(dataAP3$ozone_ppm)
+v = ((dataAP3$ozone_ppm - min_ozone) * (1 - 0)) / (max_ozone-min_ozone)
+head(v)
+```
+
+```{r}
+hist(v)
+```
+
+### Z-score Normalization
+
+```{r}
+mean_hpa = mean(dataAP3$pressure_height.hPA)
+sd_hpa = sd(dataAP3$pressure_height.hPA)
+z_score_hpa = (dataAP3$pressure_height.hPA - mean_hpa) / sd_hpa
+head(z_score_hpa)
+```
+
+### Decimal Scaling
+
+```{r}
+pHnew = dataAP3$pressure_height.hPA/1000
+head(pHnew)
+```
+
+### Normaling Data Distribution
+
+![](images/clipboard-1257089873.png)
+
+```{r}
+dataAP3$Visibility_pAerosol
+hist(dataAP3$Visibility_pAerosol)
+```
+
+```{r}
+vis2 = sqrt(dataAP3$Visibility_pAerosol)
+hist(vis2)
+```
+
+## Assessing Normality
+
+### Histogram & Boxplot
+
+### Normal Quantile Plot (Q-Q Plot)
+
+### Goodnes-of-fit test
+
+#### Kolmogorov-Smirnov
+
+#### Shapiro-Wilk
+
+#### Anderson-Darling
+
+## Discretization
+
+### Unsupervised Learning
+
+This method need the knowledge of the industry and can be made manually for example like the financial class (B40, M40, T20)
+
+```{r}
+library(infotheo)
+data("USArrests")
+attach(USArrests)
+head(USArrests)
+```
+
+```{r}
+cutoff = 10 # Need domain explanation
+status_m = ifelse(Murder<10,'Low Risk','High Risk')
+head(status_m)
+```
+
+## Attribute formation
+
+## Amoothing
