--- a/5. Data Transformation and Discretization/Code and Data/Data Transformation and Discretization.Rmd
+++ b/5. Data Transformation and Discretization/Code and Data/Data Transformation and Discretization.Rmd
@@ -5,6 +5,7 @@ date: "2024-12-18"
 output:
   pdf_document:
     toc: true
+    toc_depth: 6
 ---
 
 # Data Transformation and Discretization
@@ -90,11 +91,13 @@ hist(vis2)
 
 This method need the knowledge of the industry and can be made manually for example like the financial class (B40, M40, T20)
 
+#### 2 category
+
 ```{r}
 library(infotheo)
 data("USArrests")
 attach(USArrests)
-head(USArrests)
+USArrests
 ```
 
 ```{r}
@@ -103,6 +106,46 @@ status_m = ifelse(Murder<10,'Low Risk','High Risk')
 head(status_m)
 ```
 
+#### More than 2 category
+
+```{r}
+library(car)
+status_den = Recode(UrbanPop, "0:50 = 'Low Density';
+                               51:70 = 'Moderate Density';
+                               else = 'High Density'")
+head(status_den)
+```
+
+#### Equal-width
+
+```{r}
+assault_status = discretize(Assault, 'equalwidth', 4)
+unique(assault_status)
+head(assault_status)
+```
+
+```{r}
+barplot(table(assault_status$X))
+hist(assault_status$X)
+```
+
+#### Equal Frequency
+
+```{r}
+barplot(table(discretize(Assault, 'equalfreq', 4)$X))
+```
+
+### Supervised Learning
+
+#### Chi2
+
+```{r}
+library(discretization)
+data(iris)
+iris2 = chi2(iris, alp=0.05)$Disc.data
+head(iris2)
+```
+
 ## Attribute formation
 
-## Amoothing
+## Smoothing
