--- a/4. Data Cleaning/Code and Data/Data Cleaning.Rmd
+++ b/4. Data Cleaning/Code and Data/Data Cleaning.Rmd
@@ -32,6 +32,8 @@ head(mdata)
 md.pattern(mdata)
 ```
 
+Remove rows that contain missing value.
+
 ```{r}
 mdata2 = mdata[complete.cases(mdata),]
 mdata[!complete.cases(mdata),]
@@ -43,7 +45,7 @@ mdata$indus
 mdata
 ```
 
-F
+Impute data using Central measure (median)
 
 ```{r}
 median(mdata$crim, na.rm=T)
@@ -52,3 +54,32 @@ mdata
 ```
 
 `na.rm` argument ask the user whether the missing value should be remove before computing the median
+
+```{r}
+par(mfrow=c(1,3))
+hist(mdata$crim)
+hist(mdata$indus)
+hist(mdata$medv)
+```
+
+We can see that all three histogram is not symmetry.
+
+# K-Nearest Neighbor
+
+```{r}
+iris_mis1 = read.csv('iris.mis1.csv')
+iris_mis1
+```
+
+```{r}
+library(multiUS)
+iris_knn = KNNimp(data=iris_mis1, k=10)
+iris_knn
+```
+
+# Statistical Method
+
+```{r}
+airquality = read.table('airquality.txt')
+
+```
