--- a/8. Mining Time Series Data/Code and Data/Mining Time Series Data.Rmd
+++ b/8. Mining Time Series Data/Code and Data/Mining Time Series Data.Rmd
@@ -6,7 +6,6 @@ output:
   pdf_document:
     toc: true
     toc_depth: 6
-geometry: margin=0.5cm
 ---
 
 ## 1. Convert any data type into "Date" data type ISO 8601
@@ -171,6 +170,8 @@ fcst <- forecast(eco_model)
 fcst
 is.null(eco_model)
 ```
+
+![](images/clipboard-3702355767.png)
 
 ```{r}
 #eco_U <- fcst$pred+0.69*fcst$se
